Stop wrapping code.

--- a/static/css/slim.css
+++ b/static/css/slim.css
@@ -107,7 +107,6 @@ pre {
   font-size: 0.8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
   background-color: #060606; }
